ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservicea
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    #cert-manager.io/issuer: "letsencrypt-staging"

spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: webapp
      port:
        number: 80
  tls:
  - hosts:
    - test1.serjikey.com
    secretName: test1.serjikey.com
  rules:
  - host: test1.serjikey.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 80
